[gd_scene load_steps=12 format=2]

[ext_resource path="res://laucherRoot.gd" type="Script" id=1]
[ext_resource path="res://launchButton.gd" type="Script" id=2]
[ext_resource path="res://LauncherHSlider.tscn" type="PackedScene" id=3]
[ext_resource path="res://launcherCheckBox.gd" type="Script" id=4]
[ext_resource path="res://saveButton.gd" type="Script" id=5]
[ext_resource path="res://LauncherList.tscn" type="PackedScene" id=6]
[ext_resource path="res://LauncherSpinBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://errortracer.tscn" type="PackedScene" id=8]

[sub_resource type="GDScript" id=1]
script/source = "extends CheckBox

func _pressed():
	get_tree().current_scene.changedSetting(\"_autostart\",pressed)
	get_tree().current_scene.changedSetting(text,pressed)
	if pressed == false:
		for root in get_tree().current_scene.SETTINGS_ROOT_PATHS:
			for node in get_tree().current_scene.get_node(root).get_children():
				if node is launchButton:
					node.set_timer(false)
					node.text = node.buttontext
					break
"

[sub_resource type="GDScript" id=2]
script/source = "extends CheckBox

func _ready():
	yield(get_tree(),\"idle_frame\")
	yield(get_tree(),\"idle_frame\")
	QuitDialog.autoquit = pressed
	get_tree().current_scene.changedSetting(text,pressed)

func _pressed():
	QuitDialog.autoquit = pressed
	get_tree().current_scene.changedSetting(text,pressed)
	
"

[sub_resource type="GDScript" id=4]
script/source = "extends Button

func _pressed():
	disabled = true
	var f := File.new()
	if f.file_exists(\"res://settings.json\") == true:
		f.open(\"res://settings.json\",File.WRITE)
		f.store_string(\"{}\")
		f.close()
		yield(get_tree(),\"idle_frame\")
		yield(get_tree(),\"idle_frame\")
		get_tree().reload_current_scene()
"

[node name="launcher" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = -5.0
margin_bottom = 19.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
margin_top = 5.0
margin_right = 155.0
margin_bottom = 19.0
text = "Check Settings Launcher"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Title"]
margin_left = 175.0
margin_right = 484.0
margin_bottom = 24.0
text = "Autostart on startup (uncheck to stop timer)"
script = SubResource( 1 )

[node name="CheckBox2" type="CheckBox" parent="Title"]
margin_left = 504.0
margin_right = 763.0
margin_bottom = 24.0
text = "Auto select Save&Quit in Exit popup"
script = SubResource( 2 )

[node name="Button2" parent="Title" instance=ExtResource( 8 )]
margin_left = 783.0
margin_right = 807.0
margin_bottom = 24.0
popup_valign = 2

[node name="Button" type="Button" parent="Title"]
margin_left = 892.0
margin_top = 4.0
margin_right = 1014.0
margin_bottom = 24.0
size_flags_horizontal = 10
size_flags_vertical = 8
text = "Reset all settings"

[node name="Popup" type="WindowDialog" parent="Title/Button"]
margin_left = -714.0
margin_top = 199.0
margin_right = -477.0
margin_bottom = 339.0
window_title = "Confirmation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Title/Button/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Title/Button/Popup/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title/Button/Popup/Control/VBoxContainer"]
margin_right = 227.0
margin_bottom = 103.0
size_flags_vertical = 11
text = "Are you sure you want to reset all settings?"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Title/Button/Popup/Control/VBoxContainer"]
margin_top = 110.0
margin_right = 227.0
margin_bottom = 130.0
size_flags_vertical = 10
size_flags_stretch_ratio = 0.0
custom_constants/separation = 7

[node name="Button" type="Button" parent="Title/Button/Popup/Control/VBoxContainer/HBoxContainer"]
margin_right = 110.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Yes"
script = SubResource( 4 )

[node name="Button2" type="Button" parent="Title/Button/Popup/Control/VBoxContainer/HBoxContainer"]
margin_left = 117.0
margin_right = 227.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "No"

[node name="Container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 20.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftGrid" type="VBoxContainer" parent="Container"]
margin_right = 252.0
margin_bottom = 570.0
size_flags_horizontal = 3
custom_constants/separation = 5

[node name="launchButton" type="Button" parent="Container/LeftGrid"]
margin_right = 252.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
text = "Launch Settings"
script = ExtResource( 2 )

[node name="RightGrid" type="VBoxContainer" parent="Container"]
margin_left = 257.0
margin_right = 1014.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Container/RightGrid"]
margin_right = 757.0
margin_bottom = 14.0
text = "Settings"
align = 1

[node name="LauncherSpinBox" parent="Container/RightGrid" instance=ExtResource( 7 )]
margin_left = 683.0
margin_top = 24.0
margin_right = 757.0
margin_bottom = 48.0
size_flags_horizontal = 8
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "SpinBox"

[node name="LauncherHSlider" parent="Container/RightGrid" instance=ExtResource( 3 )]
margin_left = 657.0
margin_top = 58.0
margin_right = 757.0
margin_bottom = 74.0
size_flags_horizontal = 8
text = "HSlider"

[node name="LauncherCheckBox" type="CheckBox" parent="Container/RightGrid"]
margin_left = 667.0
margin_top = 84.0
margin_right = 757.0
margin_bottom = 108.0
size_flags_horizontal = 8
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_constants/check_vadjust = 0
text = "CheckBox"
script = ExtResource( 4 )

[node name="LauncherList" parent="Container/RightGrid" instance=ExtResource( 6 )]
margin_left = 357.0
margin_top = 118.0
margin_right = 757.0
margin_bottom = 399.0
rect_min_size = Vector2( 400, 281 )
size_flags_horizontal = 8
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
items = PoolStringArray( "First NonActive", "Second NonActive", "Third NonActive" )
selected_items = PoolStringArray( "First Active", "Second Active", "Third Active" )
text = "List"

[node name="saveButton" type="Button" parent="Container/RightGrid"]
margin_left = 607.0
margin_top = 409.0
margin_right = 757.0
margin_bottom = 434.0
rect_min_size = Vector2( 150, 25 )
size_flags_horizontal = 8
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Save settings"
script = ExtResource( 5 )

[connection signal="pressed" from="Title/Button" to="Title/Button/Popup" method="popup_centered"]
[connection signal="pressed" from="Title/Button/Popup/Control/VBoxContainer/HBoxContainer/Button2" to="Title/Button/Popup" method="set_visible" binds= [ false ]]
